--- a/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
@@ -399,7 +399,7 @@
                                 }
                                 //Invalid
                                 if(secondTest ==1175){
-                                    jq(".kit-name2 input").prop("disabled", false);
+                                    jq(".kit-name2 select").prop("disabled", false);
                                     jq(".lot-number2 input").prop("disabled", false);
                                     jq("#expiry-date2 input").prop("disabled", false);
                                     getField('hiv-final-result.value').val(1138);
