excluded re-enrollment in newly enrolled cohort query

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -490,7 +490,7 @@
 						<obs
 								id="transfer-in-status" conceptId="164932" style="radio"
 								answerConceptIds="164144,160563,164931,159833"
-								answerLabels="New Patient,Transfer in,Transit,Re-enrollment"
+								answerLabels="New Patient,Transfer in,Transit,Re-enrollment(Re-activation)"
 								required="true"
 						/>
 					</td>
