added vl and cd4 results in RDE form section V

--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257VisitSummary.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257VisitSummary.html
@@ -1067,11 +1067,14 @@
                      <tr>
                          <th rowspan="2">Laboratory<br/>Investigations<br />Done</th>
 
-                         <th colspan="2">Lab Investigation(s)</th>
+                         <th colspan="2">HIV Viral Load/CD4 </th>
                          <td>(v)</td>
-                         <td colspan="2">
-
+                         <td>VL Results:
+                             <span id="vLoadResults"> <obs conceptId="856AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" showUnits="true" id="viral-load-value"/></span>
+                             or
+                             <obs conceptId="1305AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="1302AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="LDL" id="ldl"/>
                          </td>
+                         <td colspan="2">CD4 Count: <obs conceptId="5497AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /> or <obs conceptId="730AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />%</td>
                      </tr>
                      <tr class="patient-details">
                          <th colspan="2">Lab Result(s)</th>
