Added TS validations for RDE form, validated Family history by clearing next hiv test date after baseline change,cleared hidden fields for hiv greencard TS

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivFamilyHistory.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivFamilyHistory.html
@@ -215,6 +215,7 @@
                     $(row).find('.next-hivtest-date input').attr('disabled', true);
                     $(row).find('.hiv-result select').attr('disabled', true);
                     //Clearing fields
+                    $(row).find('.next-hivtest-date input').val('');
                     $(row).find('.referring-facility input').val('');
                     $(row).find('.ccc-no input').val('');
                     $(row).find('.hiv-result select').val('');
@@ -227,6 +228,7 @@
                     $(row).find('.next-hivtest-date input').attr('disabled', false);
                     $(row).find('.hiv-result select').attr('disabled', false);
                     //Clearing fields
+                    $(row).find('.next-hivtest-date input').val('');
                     $(row).find('.referring-facility input').val('');
                     $(row).find('.ccc-no input').val('');
                     $(row).find('.hiv-result select').val('');
@@ -239,6 +241,7 @@
                     $(row).find('.next-hivtest-date input').attr('disabled', false);
                     $(row).find('.hiv-result select').attr('disabled', false);
                     //Clearing fields
+                    $(row).find('.next-hivtest-date input').val('');
                     $(row).find('.referring-facility input').val('');
                     $(row).find('.ccc-no input').val('');
                     $(row).find('.hiv-result select').val('');
